# website

./: .dockerignore  .eslintrc.cjs  .gitignore  .prettierrc.cjs  App.js  CLAUDE.md  Caddyfile  Cargo.toml  Dockerfile  Headers.js  Headers.test.js  LICENSE  Logger.js  README.md  Request.js  Response.js  Router.js  Router.test.js  build-and-deploy.js  build-and-deploy.sh  bun.lockb  caddy-api.service  caddy.json  caddy.service  components.js  content-security-policy.js  content-security-policy.test.js  contentType.js  db.js  db.test.js  html-types.ts  html.js  html.test.js  html2-build.js  html2.js  html2.test.js  html4.js  index.js  layout.js  logger.js  (+25 more)
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: main.yml  (+1 more)
.hooks/: pre-commit
database/: schema.sql
e2e/: home.spec.ts  link-cleaner.spec.ts  microwave-time-calculator.spec.ts  navigation.spec.ts  uuid.spec.ts
lib/: App.js  AppClass.js  Request.js  Response.js  Router.js  app.js  config.js  content-type.js  db.test.js  express.js  html.js  http-terminator.js  layout.js  logger.js  migrations.js  request.js  response.js  route.js  router.js  session-store.js  session.js  user.js  utils.d.ts
middleware/: not-found.js  request-id-middleware.js  request-id.js  request-logger.js  static.js  user.js
migrations/: 001_inital.sql  202306290144_session_table.sql  202306290145_user_password.sql  202306290146_user_password_binary.sql  202306290147_session_user_id_type.sql
old/: prettier.config.js  tailwind.config.ts
routes/: auth.js  css.js  database.js  echo.js  migrations.js  old.js  stuff.js  users.js  utils.js
scripts/: build-and-deploy.js  build-and-deploy.sh  build.sh  check.js  deploy.sh  rollback.sh  run.js  server-deploy.sh  server-rollback.sh  server-setup.sh  setup.sh  tailwind-watch.sh  update-private-relay.sh
sql/: drop-tables.sql
src/: config.rs  extractors.rs  helpers.rs  main.rs  private_relay.rs  reset.d.ts  router.rs  server.ts  tsconfig.json
static/: README.md  amazon-short-link.html  amazon-short-link2.html  auth.html  google-account-links.html  google-short-link.html  index.html  link-cleaner.html  microwave-time-calculator.html  microwave_time_calculator.html  output.css  quoted-printable.html  security.txt  stuff.html  styles.css  tests.html  tsconfig.json  username.html
templates/: amazon-short-link.html  echo.html  echo.html.jinja  index.html  index.html.jinja  layout.html  layout.html.jinja  link-cleaner.html  macros.html  microwave.html.jinja  test.html  uuid.html  uuid.html.jinja
views/: layout.js  test.njk
(+76 files in other folders)
