[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.8"
actix-web = { version = "4.10.2", features = ["rustls-0_23"] }
askama = "0.14.0"
askama_web = { version = "0.14.6", features = ["actix-web-4"] }
csv = "1.3.1"
env_logger = "0.11.8"
futures-util = "0.3.31"
ipnet = "2.11.0"
log = "0.4.28"
multimap = "0.10.1"
reqwest = "0.12.24"
rustls = "0.23.28"
rustls-acme = "0.14.1"
rustls-pki-types = "1.12.0"
serde_json = "1.0.145"
tokio = "1.48.0"
tokio-stream = "0.1.17"
uuid = { version = "1.18.1", features = ["v4"] }
woothee = "0.13.0"
