[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
askama_axum = "0.4.0"
axum = { version = "0.8", features = ["macros", "http2"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
csv = "1.4.0"
ipnet = "2.11.0"
multimap = "0.10.1"
reqwest = "0.12.24"
rustls = "0.23.35"
rustls-acme = "0.14.1"
rustls-pki-types = "1.13.0"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["compression-full", "cors", "fs", "set-header", "trace"] }
http-body-util = "0.1"
uuid = { version = "1.18.1", features = ["v4"] }
woothee = "0.13.0"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
