[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
askama_web = { version = "0.15.1", features = ["axum-0.8"] }
axum = { version = "0.8.8", features = ["macros", "http2"] }
csv = "1.4.0"
ipnet = "2.11.0"
multimap = "0.10.1"
reqwest = "0.13.2"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.8", features = ["fs", "set-header", "trace"] }
http-body-util = "0.1.3"
uuid = { version = "1.20.0", features = ["v4"] }
woothee = "0.13.0"
tower = "0.5.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
